@@ -65,6 +65,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
@@ -106,6 +107,7 @@
     <Compile Include="Databases\SqlServer\Select.cs" />
     <Compile Include="Databases\SqlServer\Update.cs" />
     <Compile Include="Databases\SqlServer\_SqlServer.cs" />
+    <Compile Include="Device\GetRAM.cs" />
     <Compile Include="Dev\DebugMsg.cs" />
     <Compile Include="Dev\_Dev.cs" />
     <Compile Include="DynVars\DynVar.cs" />
