@@ -118,6 +118,8 @@
             this.tab_generators = new System.Windows.Forms.TabPage();
             this.tabs_generators = new System.Windows.Forms.TabControl();
             this.tab_generators_generatePassword = new System.Windows.Forms.TabPage();
+            this.label_generators_generatePassword_allowedChars = new System.Windows.Forms.Label();
+            this.textBox_generators_generatePassword_allowedChars = new System.Windows.Forms.TextBox();
             this._generators_generatePassword_length = new System.Windows.Forms.Label();
             this.tab_controls = new System.Windows.Forms.TabPage();
             this.tabs_controls = new System.Windows.Forms.TabControl();
@@ -218,8 +220,13 @@
             this.checkBox_tg_debug = new System.Windows.Forms.CheckBox();
             this.checkBox_tg_debugErrors = new System.Windows.Forms.CheckBox();
             this.numeric_tg_testingIndex = new System.Windows.Forms.NumericUpDown();
-            this.textBox_generators_generatePassword_allowedChars = new System.Windows.Forms.TextBox();
-            this.label_generators_generatePassword_allowedChars = new System.Windows.Forms.Label();
+            this.tab_device = new System.Windows.Forms.TabPage();
+            this.tabs_device = new System.Windows.Forms.TabControl();
+            this.tab_device_getRam = new System.Windows.Forms.TabPage();
+            this.textBox_device_getRam_value = new System.Windows.Forms.TextBox();
+            this.comboBox_device_getRam_ramType = new System.Windows.Forms.ComboBox();
+            this.button_device_getRam_update = new System.Windows.Forms.Button();
+            this.label_device_getRam_gb = new System.Windows.Forms.Label();
             ((System.ComponentModel.ISupportInitialize)(this.numeric_generators_generatePassword_length)).BeginInit();
             ((System.ComponentModel.ISupportInitialize)(this.pictureBox_tools_setWallpaper6getGifFrames_gif)).BeginInit();
             ((System.ComponentModel.ISupportInitialize)(this.numeric_math_calculateCombinations_group)).BeginInit();
@@ -294,6 +301,9 @@
             this.tab_math_isPrimeNumber.SuspendLayout();
             this.tab_dynvars.SuspendLayout();
             ((System.ComponentModel.ISupportInitialize)(this.numeric_tg_testingIndex)).BeginInit();
+            this.tab_device.SuspendLayout();
+            this.tabs_device.SuspendLayout();
+            this.tab_device_getRam.SuspendLayout();
             this.SuspendLayout();
             // 
             // button_database_createTable
@@ -730,6 +740,7 @@
             this.tabs_tg.Controls.Add(this.tab_network);
             this.tabs_tg.Controls.Add(this.tab_math);
             this.tabs_tg.Controls.Add(this.tab_dynvars);
+            this.tabs_tg.Controls.Add(this.tab_device);
             this.tabs_tg.Location = new System.Drawing.Point(0, 0);
             this.tabs_tg.Name = "tabs_tg";
             this.tabs_tg.SelectedIndex = 0;
@@ -1146,6 +1157,23 @@
             this.tab_generators_generatePassword.TabIndex = 0;
             this.tab_generators_generatePassword.Text = "Generate Password";
             this.tab_generators_generatePassword.UseVisualStyleBackColor = true;
+            // 
+            // label_generators_generatePassword_allowedChars
+            // 
+            this.label_generators_generatePassword_allowedChars.AutoSize = true;
+            this.label_generators_generatePassword_allowedChars.Location = new System.Drawing.Point(289, 110);
+            this.label_generators_generatePassword_allowedChars.Name = "label_generators_generatePassword_allowedChars";
+            this.label_generators_generatePassword_allowedChars.Size = new System.Drawing.Size(77, 13);
+            this.label_generators_generatePassword_allowedChars.TabIndex = 15;
+            this.label_generators_generatePassword_allowedChars.Text = "Allowed Chars:";
+            // 
+            // textBox_generators_generatePassword_allowedChars
+            // 
+            this.textBox_generators_generatePassword_allowedChars.Location = new System.Drawing.Point(288, 126);
+            this.textBox_generators_generatePassword_allowedChars.Name = "textBox_generators_generatePassword_allowedChars";
+            this.textBox_generators_generatePassword_allowedChars.Size = new System.Drawing.Size(256, 20);
+            this.textBox_generators_generatePassword_allowedChars.TabIndex = 14;
+            this.textBox_generators_generatePassword_allowedChars.Text = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
             // 
             // _generators_generatePassword_length
             // 
@@ -2205,22 +2233,75 @@
             0,
             0});
             // 
-            // textBox_generators_generatePassword_allowedChars
+            // tab_device
             // 
-            this.textBox_generators_generatePassword_allowedChars.Location = new System.Drawing.Point(288, 126);
-            this.textBox_generators_generatePassword_allowedChars.Name = "textBox_generators_generatePassword_allowedChars";
-            this.textBox_generators_generatePassword_allowedChars.Size = new System.Drawing.Size(256, 20);
-            this.textBox_generators_generatePassword_allowedChars.TabIndex = 14;
-            this.textBox_generators_generatePassword_allowedChars.Text = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+            this.tab_device.Controls.Add(this.tabs_device);
+            this.tab_device.Location = new System.Drawing.Point(4, 22);
+            this.tab_device.Name = "tab_device";
+            this.tab_device.Padding = new System.Windows.Forms.Padding(3);
+            this.tab_device.Size = new System.Drawing.Size(844, 322);
+            this.tab_device.TabIndex = 8;
+            this.tab_device.Text = "Device";
+            this.tab_device.UseVisualStyleBackColor = true;
             // 
-            // label_generators_generatePassword_allowedChars
+            // tabs_device
             // 
-            this.label_generators_generatePassword_allowedChars.AutoSize = true;
-            this.label_generators_generatePassword_allowedChars.Location = new System.Drawing.Point(289, 110);
-            this.label_generators_generatePassword_allowedChars.Name = "label_generators_generatePassword_allowedChars";
-            this.label_generators_generatePassword_allowedChars.Size = new System.Drawing.Size(77, 13);
-            this.label_generators_generatePassword_allowedChars.TabIndex = 15;
-            this.label_generators_generatePassword_allowedChars.Text = "Allowed Chars:";
+            this.tabs_device.Controls.Add(this.tab_device_getRam);
+            this.tabs_device.Dock = System.Windows.Forms.DockStyle.Fill;
+            this.tabs_device.Location = new System.Drawing.Point(3, 3);
+            this.tabs_device.Name = "tabs_device";
+            this.tabs_device.SelectedIndex = 0;
+            this.tabs_device.Size = new System.Drawing.Size(838, 316);
+            this.tabs_device.TabIndex = 0;
+            // 
+            // tab_device_getRam
+            // 
+            this.tab_device_getRam.Controls.Add(this.label_device_getRam_gb);
+            this.tab_device_getRam.Controls.Add(this.button_device_getRam_update);
+            this.tab_device_getRam.Controls.Add(this.comboBox_device_getRam_ramType);
+            this.tab_device_getRam.Controls.Add(this.textBox_device_getRam_value);
+            this.tab_device_getRam.Location = new System.Drawing.Point(4, 22);
+            this.tab_device_getRam.Name = "tab_device_getRam";
+            this.tab_device_getRam.Padding = new System.Windows.Forms.Padding(3);
+            this.tab_device_getRam.Size = new System.Drawing.Size(830, 290);
+            this.tab_device_getRam.TabIndex = 1;
+            this.tab_device_getRam.Text = "Get RAM";
+            this.tab_device_getRam.UseVisualStyleBackColor = true;
+            // 
+            // textBox_device_getRam_value
+            // 
+            this.textBox_device_getRam_value.Location = new System.Drawing.Point(291, 141);
+            this.textBox_device_getRam_value.Name = "textBox_device_getRam_value";
+            this.textBox_device_getRam_value.Size = new System.Drawing.Size(233, 20);
+            this.textBox_device_getRam_value.TabIndex = 0;
+            // 
+            // comboBox_device_getRam_ramType
+            // 
+            this.comboBox_device_getRam_ramType.FormattingEnabled = true;
+            this.comboBox_device_getRam_ramType.Location = new System.Drawing.Point(291, 114);
+            this.comboBox_device_getRam_ramType.Name = "comboBox_device_getRam_ramType";
+            this.comboBox_device_getRam_ramType.Size = new System.Drawing.Size(233, 21);
+            this.comboBox_device_getRam_ramType.TabIndex = 1;
+            this.comboBox_device_getRam_ramType.SelectedIndexChanged += new System.EventHandler(this.comboBox_device_getRam_ramType_SelectedIndexChanged);
+            // 
+            // button_device_getRam_update
+            // 
+            this.button_device_getRam_update.Location = new System.Drawing.Point(449, 167);
+            this.button_device_getRam_update.Name = "button_device_getRam_update";
+            this.button_device_getRam_update.Size = new System.Drawing.Size(75, 23);
+            this.button_device_getRam_update.TabIndex = 2;
+            this.button_device_getRam_update.Text = "Update";
+            this.button_device_getRam_update.UseVisualStyleBackColor = true;
+            this.button_device_getRam_update.Click += new System.EventHandler(this.button_device_getRam_update_Click);
+            // 
+            // label_device_getRam_gb
+            // 
+            this.label_device_getRam_gb.AutoSize = true;
+            this.label_device_getRam_gb.Location = new System.Drawing.Point(530, 144);
+            this.label_device_getRam_gb.Name = "label_device_getRam_gb";
+            this.label_device_getRam_gb.Size = new System.Drawing.Size(22, 13);
+            this.label_device_getRam_gb.TabIndex = 3;
+            this.label_device_getRam_gb.Text = "GB";
             // 
             // Main
             // 
@@ -2336,6 +2417,10 @@
             this.tab_dynvars.ResumeLayout(false);
             this.tab_dynvars.PerformLayout();
             ((System.ComponentModel.ISupportInitialize)(this.numeric_tg_testingIndex)).EndInit();
+            this.tab_device.ResumeLayout(false);
+            this.tabs_device.ResumeLayout(false);
+            this.tab_device_getRam.ResumeLayout(false);
+            this.tab_device_getRam.PerformLayout();
             this.ResumeLayout(false);
             this.PerformLayout();
 
@@ -2533,5 +2618,12 @@
         internal System.Windows.Forms.TextBox textBox_generators_generatePassword_allowedChars;
         internal System.Windows.Forms.Label label_generators_generatePassword_allowedChars;
         internal System.Windows.Forms.Label label_network_security_openFirewallPort_warningAdmin;
+        internal System.Windows.Forms.TabPage tab_device;
+        internal System.Windows.Forms.TabControl tabs_device;
+        internal System.Windows.Forms.TabPage tab_device_getRam;
+        internal System.Windows.Forms.Button button_device_getRam_update;
+        internal System.Windows.Forms.ComboBox comboBox_device_getRam_ramType;
+        internal System.Windows.Forms.TextBox textBox_device_getRam_value;
+        private System.Windows.Forms.Label label_device_getRam_gb;
     }
 }
